fix some layout issue on mobile

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -14,7 +14,7 @@ body {
   background-color: #7c7d7e;
   font-family: arial;
   color: #252525;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
 }
 
@@ -23,7 +23,7 @@ body {
   background-repeat: repeat-y;
   background-size: cover;
   z-index: 10;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
 
   & .backdrop {
@@ -35,7 +35,7 @@ body {
       "main"
       "footer";
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     z-index: 20;
     background-color: rgba(0, 0, 0, 0.6);
     justify-content: center;
@@ -50,8 +50,8 @@ body {
     display: grid;
     justify-content: center;
     height: 100%;
-    width: 100%;
-    max-width: 60rem;
+    width: 100vw;
+    max-width: 45rem;
 
     & .main-text {
       align-self: center;
