--- a/src/components/note.scss
+++ b/src/components/note.scss
@@ -2,7 +2,7 @@
   & .search-bar {
     grid-area: search;
     width: 100%;
-    max-width: 80rem;
+    max-width: 45rem;
     height: 3rem;
     padding-left: 0.5rem;
     border-radius: 5px;
@@ -16,8 +16,9 @@
   & .primary-btn {
     grid-area: new-note;
     justify-self: end;
-    height: 3rem;
-    width: 8rem;
+    align-self: center;
+    padding: 0.4rem 0.6rem;
+    width: 6rem;
     border-radius: 30px;
     font-size: 1.2rem;
     color: white;
@@ -34,8 +35,9 @@
   & .cancel-btn {
     grid-area: search;
     justify-self: start;
-    height: 3rem;
-    width: 8rem;
+    align-self: center;
+    padding: 0.4rem 0.6rem;
+    width: 6rem;
     border-radius: 30px;
     font-size: 1.2rem;
     color: white;
@@ -51,8 +53,9 @@
 
   & .submit-btn {
     justify-self: start;
-    width: 8rem;
-    height: 3rem;
+    align-self: center;
+    padding: 0.4rem 0.6rem;
+    width: 6rem;
     font-size: 1.2rem;
     color: white;
     border: none;
@@ -192,9 +195,13 @@
   .container {
     display: grid;
     height: 100%;
+    width: 100%;
+    min-width: 100vw;
     padding: 0.5rem;
     padding-top: 1rem;
-    grid-template-columns: auto;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     grid-row-gap: 1rem;
     grid-column-gap: 1rem;
@@ -204,7 +211,10 @@
     align-content: start;
 
     .search-bar {
+      height: 2.3rem;
+      border-radius: 30px;
       width: 4rem;
+      align-self: center;
       &:focus {
         width: 100%;
       }
@@ -217,6 +227,7 @@
 
     .aside {
       grid-area: main;
+      min-width: 60vw;
     }
 
     .app-title {
@@ -224,7 +235,8 @@
     }
 
     .note {
-      height: 70vh;
+      height: 60vh;
+      min-width: 60vw;
     }
   }
 }
@@ -235,7 +247,7 @@
     width: 100%;
     height: 80vh;
     max-height: 80vh;
-    max-width: 80rem;
+    max-width: 45rem;
     grid-template-columns: minmax(15rem, 1fr) 3fr;
     grid-template-rows: 3rem 3rem minmax(0, 1fr);
     grid-column-gap: 1rem;
@@ -247,6 +259,7 @@
 
     .submit-btn {
       grid-area: submit;
+      justify-self: end;
     }
 
     .aside {
@@ -255,10 +268,6 @@
 
     .app-title {
       grid-area: title;
-    }
-
-    .note {
-      /* height: 80vh; */
     }
   }
 }
